[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relialimo-orchestra"
version = "0.1.0"
description = "Multi-agent coding & debugging orchestra for RELIALIMO"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "openai-agents>=0.6.4",
  "pydantic>=2.6",
  "python-dotenv>=1.0.1",
]

[project.scripts]
relialimo-orchestra = "relialimo_orchestra.cli:main"

[tool.setuptools]
packages = ["relialimo_orchestra"]
